--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
-{
+{   "compileOnSave": true,
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": false,
         "removeComments": false
-    }
+    },
+    "exclude": [ "node_modules" ]
 }
