--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {   "compileOnSave": true,
     "compilerOptions": {
         "module": "commonjs",
+        "types": [
+          "node"
+        ],
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": false,
