--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/itsmed/nodeschool#readme",
   "devDependencies": {
     "@types/node": "^6.0.46"
+  },
+  "dependencies": {
+    "strftime": "^0.9.2",
+    "through2-map": "^3.0.0"
   }
 }
