--- a/howToNPM/package.json
+++ b/howToNPM/package.json
@@ -1,11 +1,12 @@
 {
   "name": "howToNPM",
   "version": "1.0.0",
-  "description": "",
+  "description": "The How To NPM section of NodeSchool",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
   },
+  "repository": "https://github.com/itsmed/nodeschool/tree/master/howToNPM",
   "keywords": [],
   "author": "itsmed",
   "license": "ISC",
