--- a/package.json
+++ b/package.json
@@ -22,7 +22,18 @@
     "@types/node": "^6.0.46"
   },
   "dependencies": {
+    "concat-stream": "^1.5.2",
+    "duplexer": "^0.1.1",
+    "duplexer2": "^0.1.4",
+    "request": "^2.78.0",
+    "split": "^1.0.0",
+    "stream-combiner": "^0.2.2",
     "strftime": "^0.9.2",
-    "through2-map": "^3.0.0"
+    "tar": "^2.2.1",
+    "through": "^2.3.8",
+    "through2": "^2.0.1",
+    "through2-map": "^3.0.0",
+    "trumpet": "^1.7.2",
+    "websocket-stream": "^3.3.0"
   }
 }
